# oncrpc-ms

./: ChangeLog  Makefile.am  README  bootstrap  configure.ac  make.bat  readme.txt
.github/workflows/: build.yml
CVS/: Entries  Repository
doc/CVS/: Entries  Repository
etc/CVS/: Entries  Repository
librpc/: Makefile.am  auth_non.c  auth_uni.c  authunix.c  bcopy.c  bindresv.c  bindresv.h  clnt_gen.c  clnt_per.c  clnt_raw.c  clnt_sim.c  clnt_tcp.c  clnt_udp.c  get_myad.c  get_myad.h  getrpcen.c  getrpcpo.c  gettimeofday.h  netconfig.c  nt.c  pmap_cln.c  pmap_get.c  pmap_gma.c  pmap_pro.c  pmap_rmt.c  portmap.c  rpc_prot.c  svc.c  svc_auth.c  svc_raw.c  svc_run.c  svc_simp.c  svc_tcp.c  svc_udp.c  xdr.c  xdr_arra.c  xdr_mem.c  xdr_rec.c  xdr_refe.c  xdr_stdi.c
librpc/CVS/: Entries  Repository
rpc/: auth.h  auth_unix.h  bcopy.h  clnt.h  netconfig.h  netdb.h  pmap_clnt.h  pmap_prot.h  pmap_rmt.h  rpc.h  rpc_msg.h  svc.h  svc_auth.h  types.h  xdr.h
rpc/CVS/: Entries  Repository
rpcgen/CVS/: Entries  Repository  Root
rpcinfo/CVS/: Entries  Repository
service/CVS/: Entries  Repository
test/CVS/: Entries  Repository
